--- a/StatsBYUI/inst/rmarkdown/templates/math_325/template.yaml
+++ b/StatsBYUI/inst/rmarkdown/templates/math_325/template.yaml
@@ -1,1 +1,4 @@
-name: Math 325 Analysis
+name: Math 325 Analysis (HTML)
+description: >
+  Analysis report template for the BYU-Idaho Math 325 class - Intermediate Statistics.
+create_dir: false
