test for date abstraction

--- a/StatsBYUI/inst/rmarkdown/templates/math_335/template.yaml
+++ b/StatsBYUI/inst/rmarkdown/templates/math_335/template.yaml
@@ -1,4 +1,5 @@
 name: Math 335 Analysis
+date: "`r format(Sys.time(), '%B %d, %Y')`"
 description: >
   Analysis report template for the BYU-Idaho Data Science Math 335 class - Data Wrangling & Visualization.
 create_dir: false
